Alterações para deploy

--- a/src/scss/_variaveis.scss
+++ b/src/scss/_variaveis.scss
@@ -8,7 +8,7 @@ $preto: #1d143a;
 $azul: 155e5e;
 
 //BACKGROUDS E IMAGENS:
-$bg--mapa-aqua: url(../../images/mapa-aqua.png);
-$bg--mapa-azul: url(../../images/mapa-azul.png);
-$bg--mapa-bege: url(../../images/mapa-bege.png);
-$bg--mapa-cinza: url(../../images/mapa-cinza.png);
+$bg--mapa-aqua: url(/images/mapa-aqua.png);
+$bg--mapa-azul: url(/images/mapa-azul.png);
+$bg--mapa-bege: url(/images/mapa-bege.png);
+$bg--mapa-cinza: url(/images/mapa-cinza.png);
